--- a/template-vanilla/index.html
+++ b/template-vanilla/index.html
@@ -2,10 +2,18 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/tbd.svg" />
+    <link rel="stylesheet" type="text/css" href="/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web5 App</title>
 </head>
 <body>
   <div id="app" ></div>
+  <script type="importmap">
+    { 
+      "imports": {
+        "@web5/api/browser": "https://cdn.jsdelivr.net/npm/@web5/api@0.8.3/dist/browser.mjs"
+      } 
+    }
+  </script>  
   <script type="module" src="/index.js"></script>
 </body>
