--- a/template-vanilla/index.html
+++ b/template-vanilla/index.html
@@ -8,12 +8,5 @@
 </head>
 <body>
   <div id="app" ></div>
-  <script type="importmap">
-    { 
-      "imports": {
-        "@web5/api/browser": "https://cdn.jsdelivr.net/npm/@web5/api@0.8.3/dist/browser.mjs"
-      } 
-    }
-  </script>  
-  <script type="module" src="/index.js"></script>
+  <script type="module" src="/index.ts"></script>
 </body>
